== Version 2.1.0 unreleased

* Added python 3 compatibility
* Add a specific exception for signature validation failures

== Version 2.0.4

* Bug fixes
* Added CarrierService resource
* Added Property resource to LineItem

== Version 2.0.3

* Add Order Risk resource

== Version 2.0.2

* Add access to FulfillmentService endpoint
* Fix some import bugs

== Version 2.0.1

* Package bug fix

== Version 2.0.0

* Removed support for legacy auth
* Updated to pyactiveresource v2.0.0 which changes the default form to JSON
* in Session::request_token params is no longer optional, you must pass all the params
  and the method will now extract the code
* made create_permission_url an instance method, you'll need an instance
  of session to call this method from now on
* Updated session.request_token
* Updated Session to better match the ShopifyAPI Ruby gem
* Updated the readme to better describe how to use the library
* Added support for CustomerSavedSearch (CustomerGroup is deprecated)

== Version 1.0.7

* Fix thread local headers to store a copy of the default hash which
prevents activate_session in one thread from affecting other threads.

== Version 1.0.6

* Fix deserializing and serializing fulfillments which can now contain
arrays of strings in the tracking_urls attribute.

== Version 1.0.5

* Fix parameter passing for order cancellation.
* Fix Product.price_range method for variants with different prices.

== Version 1.0.4

* Fixed another bug in Image size methods regex.

== Version 1.0.3

* Fix bug in setting format attribute on Webhook instances.
* Fixed missing slash in return value of Image size methods
* Upgrade pyactiveresource to fix unicode encoding issues

== Version 1.0.2

* Made ShopifyResource.clear_session idempotent.

== Version 1.0.1

* Use the correct redirect parameter in Session.create_permission_url.
Was redirect_url but corrected to redirect_uri.

== Version 1.0.0

* Added support for OAuth2.